--- a/max-euwe/package.json
+++ b/max-euwe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "max-euwe",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.1.4",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,5 +22,23 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
-  }
+  },
+  "description": "Created with love",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MaxEuwe/max-euwe"
+  },
+  "keywords": [
+    "max",
+    "euwe",
+    "tea",
+    "max-euwe"
+  ],
+  "author": "MaxEuwe",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MaxEuwe/max-euwe/issues"
+  },
+  "homepage": "https://github.com/MaxEuwe/max-euwe#readme"
 }
